tests/run/error_match_nested.out
tests/run/error_match_nested.ig:11:19: error: a nested enum pattern can only bind scalar/string payloads for now (bind the payload and use a nested `match`)
